2004-07-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/stage2.c (cmain): Terminate DEFAULT_FILE with NUL
	correctly. Reported by Alban Crequy <alban.crequy@apinc.org>.

2004-07-21  Robert Millan  <robertmh@gnu.org>

	Patch from David Weinehall <tao@debian.org>
	* util/mkbimage: Fix XSI-isms (for supporting POSIX-only shells).

2004-07-20  Robert Millan  <robertmh@gnu.org>

	* util/grub-install.in: Detect GNU/k*BSD systems as well.

2004-07-16  Yoshinori K. Okuji  <okuji@enbug.org>

	* util/grub-install.in (convert): Fix the sed statement for
	Linux. The expression was ambigious in some cases.

2004-06-29  Robert Millan  <robertmh@gnu.org>

	* util/grub-set-default.in: Fix minor syntax error (non-escaped
	characters).

2004-06-24  Robert Millan  <robertmh@gnu.org>

	Fixes for FHS compliance. (/usr/share is for arch-independant data)
	* stage1/Makefile.am: Move stage files to pkglibdir.
	* stage2/Makefile.am: Likewise.
	* docs/grub.texi: s,/usr/share,/usr/lib,g.
	* util/grub-image.in: Look for stage files in pkglibdir.
	* util/grub-install.in: Likewise.

	* util/grub-install.in: Improve usage message.

2004-06-20  Yoshinori K. Okuji  <okuji@enbug.org>

	This is a big change on saving a default entry. This change
	makes it possible to set up a quite robust system using GRUB.
	Now we do not use the second sector of Stage 2 to store an
	entry number but use the file /boot/grub/default. This file
	must be generated by grub-set-default, although this file is
	plain-text.
	
	* util/grub-set-default.in: New file.
	
	* util/grub-install.in (grub_set_default): New variable.
	Use /grub instead of /boot/grub on OpenBSD as well as NetBSD.
	Run grub-set-default to make a default file.

	* util/Makefile.am (sbin_SCRIPTS): Added grub-set-default.

	* stage2/stage2.c (run_menu): Change the fallback handling to
	support multiple fallback entries.
	(cmain): Likewise. Also, get a saved entry from a default file
	if possible, before reading a config file.
